<resources>
    <string name="app_name">Verdant Vista</string>
    <string name="loading">Scouting for new species...</string>
    <string name="error_fetch">Failed to reach nature. Check your connection.</string>

    <!-- Taxon Types -->
    <string name="taxon_plants">Plants</string>
    <string name="taxon_birds">Birds</string>
    <string name="taxon_insects">Insects &amp; Arachnids</string>
    <string name="taxon_fungi">Fungi</string>
    <string name="taxon_mammals">Mammals</string>
    <string name="taxon_herps">Reptiles &amp; Amphibians</string>
    <string name="taxon_aquatic">Fish &amp; Aquatic Life</string>

    <string name="action_settings">Settings</string>

    <string name="menu_transform">Discover</string>
    <string name="menu_settings">Settings</string>

    <!-- Settings UI -->
    <string name="settings_title">Discovery Settings</string>
    <string name="label_location">Scouting Range</string>
    <string name="label_update_interval">Widget Refresh Rate</string>
    <string name="interval_15m">15 Minutes</string>
    <string name="interval_30m">30 Minutes</string>
    <string name="interval_1h">1 Hour</string>
    <string name="category_label">Taxa</string>
    <string name="theme_label">Theme</string>
    <string name="theme_forest">Forest (Evergreen)</string>
    <string name="theme_desert">Desert (Golden)</string>
    <string name="theme_midnight">Midnight (Onyx)</string>
    <string name="theme_ocean">Ocean (Azure)</string>
    <string name="theme_spring">Spring (Bloom)</string>
    <string name="theme_summer">Summer (Heat)</string>
    <string name="theme_autumn">Autumn (Amber)</string>
    <string name="theme_winter">Winter (Frost)</string>

    <string name="about_label">About this species</string>
    <string name="taxonomy_label">Taxonomy</string>
    <string name="btn_add_favorite">Save to Collection</string>
    <string name="btn_remove_favorite">Remove from Collection</string>
    <string name="no_description">Nature is still writing this description. Check back soon!</string>
    <string name="info_not_available">Information currently out of range.</string>
    <string name="taxonomy_format">%1$s: %2$s (%3$s)</string>
    <string name="no_selection">Pick a category to begin scouting.</string>

    <!-- New UI Labels -->
    <string name="label_scouting_history">Recent Discoveries</string>
    <string name="action_refresh">Refresh Nature Feed</string>

    <!-- Favorites -->
    <string name="title_favorites">My Collection</string>
    <string name="hint_search_collection">Search saved species...</string>

    <string-array name="locations_array">
        <item>Local (Current Location)</item>
        <item>Worldwide (Standard)</item>
        <item>North America</item>
        <item>Europe</item>
        <item>Asia</item>
        <item>Africa</item>
        <item>South America</item>
        <item>Oceania</item>
        <item>Alabama</item>
        <item>Alaska</item>
        <item>Arizona</item>
        <item>Arkansas</item>
        <item>California</item>
        <item>Colorado</item>
        <item>Connecticut</item>
        <item>Delaware</item>
        <item>Florida</item>
        <item>Georgia</item>
        <item>Hawaii</item>
        <item>Idaho</item>
        <item>Illinois</item>
        <item>Indiana</item>
        <item>Iowa</item>
        <item>Kansas</item>
        <item>Kentucky</item>
        <item>Louisiana</item>
        <item>Maine</item>
        <item>Maryland</item>
        <item>Massachusetts</item>
        <item>Michigan</item>
        <item>Minnesota</item>
        <item>Mississippi</item>
        <item>Missouri</item>
        <item>Montana</item>
        <item>Nebraska</item>
        <item>Nevada</item>
        <item>New Hampshire</item>
        <item>New Jersey</item>
        <item>New Mexico</item>
        <item>New York</item>
        <item>North Carolina</item>
        <item>North Dakota</item>
        <item>Ohio</item>
        <item>Oklahoma</item>
        <item>Oregon</item>
        <item>Pennsylvania</item>
        <item>Rhode Island</item>
        <item>South Carolina</item>
        <item>South Dakota</item>
        <item>Tennessee</item>
        <item>Texas</item>
        <item>Utah</item>
        <item>Vermont</item>
        <item>Virginia</item>
        <item>Washington</item>
        <item>West Virginia</item>
        <item>Wisconsin</item>
        <item>Wyoming</item>
        <item>Amazon Rainforest</item>
        <item>Great Barrier Reef</item>
        <item>Galapagos Islands</item>
        <item>Madagascar</item>
    </string-array>

    <string-array name="location_ids">
        <item>0</item> <!-- Local -->
        <item>-1</item> <!-- Worldwide -->
        <item>97394</item> <!-- North America -->
        <item>97391</item> <!-- Europe -->
        <item>97395</item> <!-- Asia -->
        <item>97392</item> <!-- Africa -->
        <item>97389</item> <!-- South America -->
        <item>97393</item> <!-- Oceania -->
        <item>19</item> <!-- Alabama -->
        <item>6</item> <!-- Alaska -->
        <item>40</item> <!-- Arizona -->
        <item>36</item> <!-- Arkansas -->
        <item>14</item> <!-- California -->
        <item>34</item> <!-- Colorado -->
        <item>49</item> <!-- Connecticut -->
        <item>4</item> <!-- Delaware -->
        <item>21</item> <!-- Florida -->
        <item>23</item> <!-- Georgia -->
        <item>11</item> <!-- Hawaii -->
        <item>22</item> <!-- Idaho -->
        <item>35</item> <!-- Illinois -->
        <item>20</item> <!-- Indiana -->
        <item>24</item> <!-- Iowa -->
        <item>25</item> <!-- Kansas -->
        <item>26</item> <!-- Kentucky -->
        <item>27</item> <!-- Louisiana -->
        <item>17</item> <!-- Maine -->
        <item>39</item> <!-- Maryland -->
        <item>2</item> <!-- Massachusetts -->
        <item>29</item> <!-- Michigan -->
        <item>38</item> <!-- Minnesota -->
        <item>37</item> <!-- Mississippi -->
        <item>28</item> <!-- Missouri -->
        <item>16</item> <!-- Montana -->
        <item>3</item> <!-- Nebraska -->
        <item>50</item> <!-- Nevada -->
        <item>41</item> <!-- New Hampshire -->
        <item>51</item> <!-- New Jersey -->
        <item>9</item> <!-- New Mexico -->
        <item>48</item> <!-- New York -->
        <item>30</item> <!-- North Carolina -->
        <item>13</item> <!-- North Dakota -->
        <item>31</item> <!-- Ohio -->
        <item>12</item> <!-- Oklahoma -->
        <item>10</item> <!-- Oregon -->
        <item>42</item> <!-- Pennsylvania -->
        <item>8</item> <!-- Rhode Island -->
        <item>43</item> <!-- South Carolina -->
        <item>44</item> <!-- South Dakota -->
        <item>45</item> <!-- Tennessee -->
        <item>18</item> <!-- Texas -->
        <item>52</item> <!-- Utah -->
        <item>47</item> <!-- Vermont -->
        <item>7</item> <!-- Virginia -->
        <item>46</item> <!-- Washington -->
        <item>33</item> <!-- West Virginia -->
        <item>32</item> <!-- Wisconsin -->
        <item>15</item> <!-- Wyoming -->
        <item>51778</item> <!-- Amazon -->
        <item>6744</item> <!-- GBR -->
        <item>6823</item> <!-- Galapagos -->
        <item>6909</item> <!-- Madagascar -->
    </string-array>

    <string-array name="themes_array">
        <item>Forest (Evergreen)</item>
        <item>Desert (Golden)</item>
        <item>Midnight (Onyx)</item>
        <item>Ocean (Azure)</item>
        <item>Spring (Bloom)</item>
        <item>Summer (Heat)</item>
        <item>Autumn (Amber)</item>
        <item>Winter (Frost)</item>
    </string-array>

    <string name="image_view_item_transform_content_description">Nature discovery photo</string>
    <string name="badge_peak_season">Peak Season</string>
    <string name="badge_local_favorite">Local Favorite</string>
    <string name="badge_rare">Rare Find</string>
    <string name="badge_seasonal_first">Seasonal First</string>
    <string name="badge_native">Native</string>
    <string name="notification_rare_title">Rare Discovery Nearby!</string>
    <string name="notification_seasonal_first_title">First of the Season!</string>
    <string name="label_proximity_notifications">Nearby Nature Alerts</string>
    <string name="desc_proximity_notifications">Get notified when interesting species are spotted near you.</string>
    <string name="notification_channel_name">Proximity Alerts</string>
    <string name="notification_nearby_title">Nature Nearby!</string>
    <string name="notification_nearby_text">A %1$s was recently spotted near you. Tap to scout!</string>
</resources>
